# videoclub

./: .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  com.vladzur.videoclub.json  meson.build
data/: com.vladzur.videoclub.desktop.in  com.vladzur.videoclub.gschema.xml  com.vladzur.videoclub.metainfo.xml.in  com.vladzur.videoclub.service.in  meson.build
data/icons/: meson.build
po/: LINGUAS  POTFILES.in  de.po  en.po  es.po  meson.build  pt.po  videoclub.pot
src/: application.rs  config.rs  edit_movie_dialog.rs  main.rs  meson.build  poster_card.ui  preferences_dialog.rs  preferences_dialog.ui  style.css  video_widget.ui  videoclub.gresource.xml  window.rs  window.ui
src/player/: bus.rs  controller.rs  events.rs  inhibit.rs  mod.rs  pipeline.rs
src/widgets/: mod.rs  poster_card.rs  video_widget.rs
videoclub-core/: Cargo.toml
videoclub-core/src/: cache.rs  catalog.rs  enricher.rs  filename.rs  hash.rs  lib.rs  log_macros.rs  metadata_store.rs  movie.rs  omdb.rs  scanner.rs  settings.rs  subtitles.rs  tmdb.rs
