[package]
name = "videoclub"
version = "1.2.0"
edition = "2021"

[workspace]
members = ["videoclub-core"]

[dependencies]
videoclub-core = { path = "videoclub-core" }
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.9", package = "gtk4", features = ["gnome_47"] }
dotenvy = "0.15"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
gstreamer = "0.23"
gstreamer-video = "0.23"
gstreamer-play = "0.23"
gstreamer-audio = "0.23"
async-channel = "2"

[dependencies.adw]
package = "libadwaita"
version = "0.7"
features = ["v1_6"]
