[package]
name = "videoclub-core"
version = "1.2.0"
edition = "2021"

[dependencies]
glib = { version = "0.20" }
gio = { version = "0.20" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
directories = "6"
sha2 = "0.10"
walkdir = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
regex = "1"
bytes = "1"
